tests/lean/bad_inaccessible2.lean.expected.out
bad_inaccessible2.lean:31:2: error: type mismatch at application
  map_head (cons a va) (cons b vb)
term
  cons b vb
has type
  vec .?m_1 (n + 1)
but is expected to have type
  vec A .(.?m_2 + 1)
